Bug 1079655: Ensure that the path used to load XPCOM can be sanitized on OSX 10.10. r=spohl